--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -1,6 +1,7 @@
 body{
     padding: 0;
     margin: 0;
+    background-color: #256D85;
 }
 *{
     transition-duration: 300ms;
@@ -11,3 +12,7 @@ body{
     height: 100vh;
     margin: 0;
 }
+
+::-webkit-scrollbar {
+    width: 0;
+  }
